# skolab-daemon

./: AUTHORS  ChangeLog  ChangeLog.kolabd.until-2010  Makefile.am  Makefile.in  NEWS  aclocal.m4  bootstrap  configure  configure.ac  dirservnotify  dirservupdate  horde.schema  kolab  kolab.conf  kolab.globals  kolab.globals.in  kolab2.schema  kolab_bootstrap  kolab_bootstrap.in  kolab_ca.sh  kolab_ca.sh.in  kolab_smtpdpolicy  kolab_smtpdpolicy.in  kolab_sslcert.sh  kolab_upgrade.in  kolabcheckperm  kolabcheckperm.in  kolabconf  kolabconf.in  kolabd  kolabd.in  kolabd.spec  kolabd.spec.in  kolabdcachetool  kolabdcachetool.in  kolabpasswd  kolabpasswd.in  kolabquotareport  kolabquotareport.in  (+12 more)
amavisd/de/: template-dsn.txt  template-spam-admin.txt
amavisd/en_US/: template-spam-admin.txt  template-spam-sender.txt  template-virus-sender.txt
autom4te.cache/: output.1  traces.0  traces.1
debian/: NEWS  README.Debian  apache.conf  changelog  changelog.kolabd  control  copyright  dirs  docs  horde-sarge-iCal.patch  kolab-ldapdistlist.cf  kolab-ldaptransport.cf  kolab-ldapvirtual.cf  kolabd.init  kolabd.lintian-overrides  links  postinst  postrm  preinst  prerm  rfc2739.schema  rules  skolab-daemon.init  slapcat.example.com  svn-deblayout  undocumented.1  uupdate-wrapper  watch
debian/.svn/: entries
debian/.svn/text-base/: changelog.svn-base  control.svn-base  copyright.svn-base  dirs.svn-base  docs.svn-base  kolabd.init.svn-base  rules.svn-base
debian/patches/: 00list  10-dist_conf.diff  10-dist_conf.dpatch  10-perl-path-fixes.dpatch  20-kolabquotawarn-issue851.dpatch  30-bootstrap.diff  30-bootstrap.dpatch  40-disable-amavis.diff  40-kolabd-pid-file.dpatch  50-kolabpasswd-slappasswd-path  50-postfix-hashes.diff  55-no-distconf_kolabsrv.diff  60-kolabdcachetool-cachefiles.diff  60-kolabdcachetool-cachefiles.dpatch  70-kolab2.schema-removal.of.rfc2739.diff  70-kolab2.schema-removal.of.rfc2739.dpatch  80-kolab-syslog-facility.dpatch  80-kolab_globals.diff  85-slapd-2.4-compat.diff  86-slapd-syncrepl-24.diff  90-slapd-template.diff  90-slapd-template.dpatch  91-postfix-template.diff  91-postfix-template.dpatch  92-cyrus-template.diff  92-resmgr-template.diff  92-resmgr-template.dpatch  93-amavisd-template.diff  93-freebusy-template.diff  93-freebusy-template.dpatch  94-cyrus-template.diff  95-resmgr-issue1383-issue2499.diff  96-imap-user-group.diff  series
debian/patches/.svn/: entries
debian/patches/.svn/text-base/: 10-perl-path-fixes.dpatch.svn-base  20-kolabquotawarn-issue851.dpatch.svn-base  30-bootstrap.dpatch.svn-base  50-kolabpasswd-slappasswd-path.svn-base  60-kolabdcachetool-cachefiles.dpatch.svn-base
debian/patches/common/: dist_conf.dpatch
dist_conf/: common  debian  kolabsrv.in  skolabsrv.in
doc/: README.amavisd  README.amavisd.in  README.ldapdelete  README.outlook  README.sieve  README.webgui  README.webgui.in
kolabd/: Makefile.am  configure.ac  dist.sh  kolab.in  kolab_ca.sh.in  rc.kolabd.in
kolabd/amavisd/de/: template-spam-sender.txt  template-virus-admin.txt  template-virus-recipient.txt  template-virus-sender.txt
kolabd/amavisd/en_US/: template-dsn.txt  template-virus-admin.txt  template-virus-recipient.txt
kolabd/dist_conf/: centos-clarkconnect  common  debian  kolab  mandriva  suse
kolabd/doc/: README.amavisd.in  README.ldapdelete  README.outlook  README.sieve  README.webgui.in
kolabd/namespace/libexec/: adduser.in  services.in  showuser.in
kolabd/templates/: convert_template2config_php.pl  imapd.annotation_definitions.template
namespace/: kolab  kolab.in
namespace/libexec/: adduser  adduser.in  deluser  deluser.in  listusers  listusers.in  newconfig  newconfig.in  services  services.in  showlog  showlog.in  showuser  showuser.in  start  start.in  stop  stop.in
templates/: DB_CONFIG.slapd.template  DB_CONFIG.slapd.template.in  access.template.in  amavis::40-skolab.template  amavisd.conf.template  amavisd.conf.template.in  apache::httpd.conf.template  apache::httpd.local.template  apache::php.ini.template  canonical.template.in  clamav::clamd.conf.template  clamav::freshclam.conf.template  clamd.conf.template  clamd.conf.template.in  convert_template2config_php.pl  cyrus-imap::cyrus.conf.template  cyrus-imap::imapd.annotation_definitions.template  cyrus-imap::imapd.conf.template  cyrus-imap::imapd.group.template  cyrus.conf.template  cyrus.conf.template.in  example.conf.template  fbview.conf.template  fbview.conf.template.in  freebusy.conf.template  freebusy.conf.template.in  freshclam.conf.template  freshclam.conf.template.in  header_checks.template.in  httpd.conf.template  httpd.conf.template.in  httpd.local.template  httpd.local.template.in  imapd.annotation_definitions.template.in  imapd.conf.template  imapd.conf.template.in  imapd.group.template  kolab.conf.template.in  kolab_smtpdpolicy.conf.template  kolab_smtpdpolicy.conf.template.in  (+53 more)
